# blue-lock

./: .env  .gitignore  Cargo.toml  Dioxus.toml  README.md  init.sql  input.css  package.json  pnpm-lock.yaml  tailwind.config.js
ai/: .gitignore  dump.py  gen.py  model.py  predict.py  train.py
assets/: tailwind.css
examples/: infer-chan.rs  infer.rs
src/: di.rs  errors.rs  lib.rs  main.rs  routes.rs
src/application/: command.rs  mod.rs  sample_service.rs  view.rs
src/ble/: detection.rs  mod.rs  model.rs  presence_detector.rs  processor.rs  ring_buffer.rs  sampler.rs  service.rs  sliding_window.rs
src/components/: device_list.rs  menu.rs  mod.rs
src/domain/: mod.rs
src/domain/entity/: sample.rs
src/domain/repo/: mod.rs  sample_repo.rs
src/domain/value_objects/: mod.rs
src/dto/: detection.rs  device.rs  mod.rs
src/infrastructure/: mod.rs  sample_repo.rs
src/infrastructure/model/: mod.rs  prelude.rs  t_sample.rs
src/pages/: about.rs  device.rs  home.rs  label.rs  layout.rs  log.rs  mod.rs  prelude.rs  side_bar.rs
