[package]
name = "dioxus-demo"
version = "0.1.0"
authors = ["luzhenfang <1318659507@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# Debug
tracing = "0.1.40"
dioxus-logger = "0.6.2"
tokio = {version = "1.44.2",features = ["full"]}
async-trait = "0.1.88"
futures = "0.3.31"
btleplug = {version = "0.11.8",features = ["serde"]}
uuid = "1.16.0"
env_logger = "0.11.8"
cfg-if = "1.0.0"
md-5 = "0.10.6"
# dioxus = { git = "https://github.com/DioxusLabs/dioxus.git",branch = "main",features = ["native","desktop","router"]}
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git",branch = "main",features = ["desktop","router"]}





[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
